--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.mx.sura_afore.af00X</groupId>
-    <artifactId>afsuam-mx-af00X-pa-saludos</artifactId>
+    <artifactId>afsuam-mx-af00X-safre-pa-saludos</artifactId>
     <version>1.0.0</version>
-    <name>afsuam-mx-af00X-pa-saludos</name>
+    <name>afsuam-mx-af00X-safre-pa-saludos</name>
     <description>Process API de Saludos basado en API Led Connectivity</description>
 
     <properties>
@@ -29,6 +29,7 @@
         <jackson-nullable.version>0.2.6</jackson-nullable.version>
         <openapi.package.api>com.mx.sura_afore.af00X.microservicio.interfaces.controller</openapi.package.api>
         <openapi.package.model>com.mx.sura_afore.af00X.microservicio.domain.model</openapi.package.model>
+        <api.type>PROCESO</api.type>
     </properties>
 
     <dependencyManagement>
@@ -122,7 +123,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/${project.artifactId}/pa-saludos.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/afsuam-mx-af00X-pa-saludos/v1-saludos.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <generateSupportingFiles>true</generateSupportingFiles>
                             <strictSpec>true</strictSpec>
